--- a/ClinicServiceV2/ClinicServiceV2.csproj
+++ b/ClinicServiceV2/ClinicServiceV2.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\Clinic.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.51.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.51.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -19,9 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Protos\Clinic.proto">
+    <Protobuf Include="Protos\Clinic.proto">
       <GrpcServices>Server</GrpcServices>
-    </None>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
