--- a/ClinicServiceV2/appsettings.json
+++ b/ClinicServiceV2/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Settings": {
+    "DatabaseOptions": {
+      "ConnectionString": "server=localhost;user=root;password=393318156aA!;database=ClinicService;"
+    }
+  }
 }
